fix postlist wrap on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -274,11 +274,16 @@ h3 {
 }
 
 .postlist {
+  --post-list-line-indent: 1.3em;
   padding: 0;
+  margin-left: var(--post-list-line-indent);
 }
 
 .postlist-item > * + * {
   margin-inline-start: 0.5rem;
+}
+.postlist-link {
+  text-indent: calc(-1 * var(--post-list-line-indent));
 }
 
 .postlist-item {
